@@ -507,7 +507,7 @@ def decode_data_from_text(data, encoding):
         raise ValueError, "unknown encoding %s" % encoding
 
 
-def open_temporary_file_fd(suffix = None):
+def open_temporary_file_fd(suffix = ""):
     """Create and open a temporary file.
 
     'suffix' -- The last part of the temporary file name, as for
@@ -520,6 +520,7 @@ def open_temporary_file_fd(suffix = None):
     file."""
 
     file_name = tempfile.mktemp(suffix)
+
     try:
         # Attempt to open the file.
         fd = os.open(file_name,
@@ -535,7 +536,7 @@ def open_temporary_file_fd(suffix = None):
     return (file_name, fd)
 
 
-def open_temporary_file(mode = "w+b", suffix = None):
+def open_temporary_file(mode = "w+b", suffix = ""):
     """Create and open a temporary file.
 
     'mode' -- The mode argument to pass to 'fopen'.
